src/scss/component/sidebar.scss
@import "~scss/_vars";

.pageFlex { display: flex; flex-direction: row; justify-content: space-between; width: 100% !important; }
.pageFlex {
	.sidebarDummy { flex-shrink: 0; }
    #page { width: 100%; position: relative; }
}

.sidebar { 
    position: fixed; background-color: #fff; z-index: 21; border-radius: 12px; box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.2); 
	display: flex; flex-direction: column; user-select: none; transition: none;
}
.sidebar.left { left: 0px; transform: translate3d(-110%,0px,0px); }
.sidebar.right { right: 0px; transform: translate3d(110%,0px,0px); }
.sidebar.fixed { 
	height: 100% !important; top: 0px !important; border-radius: 0px; box-shadow: 0px 0px rgba(0, 0, 0, 0); border-right: 1px solid $colorLightGrey; 
	transform: translate3d(0px,0px,0px);
}
.sidebar.anim { 
	transition-property: left, top, box-shadow, transform;
	transition-duration: 0.3s;
	transition-timing-function: ease-in-out;
}
.sidebar.active { transform: translate3d(0px,0px,0px); }

.sidebar.right {
    .resize-h { right: auto; left: -5px; }

	.foot {
		.icon.collapse { transform: rotateZ(180deg); }
	}
}

.sidebar.fixed.right { border-left: 1px solid $colorLightGrey; border-right: 0px; }
.sidebar.fixed {
    .resize-v { display: none; }
}

.sidebar {
    .resize-h { width: 10px; height: 100%; position: absolute; top: 0px; right: -5px; cursor: col-resize; }
    .resize-v { height: 10px; width: 100%; position: absolute; bottom: -5px; left: 0px; cursor: row-resize; }

    .loaderWrapper { position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; }

    .head { position: relative; flex-shrink: 0; -webkit-app-region: no-drag; cursor: grab; }
    .head {
        .icon.expand { 
            width: 44px; height: 32px; background-size: 20px 20px; background-image: url('~img/icon/header/expand.svg');
            background-color: $colorHover; border-radius: 0px 12px 0px 12px; position: absolute; right: 0px; top: 0px;
            cursor: pointer; z-index: 1;
        }

        .icon.close { 
            width: 28px; height: 28px; position: absolute; right: 12px; top: 16px;
            background-image: url('~img/icon/graph/close.svg'); background-size: 20px 20px; border-radius: 6px;
        }
        .icon.close:hover { background-color: $colorVeryLightGrey; }
    }

    .foot { display: flex; flex-direction: row; align-items: center;  }
    .foot {
        .icon { 
			height: 52px; flex-basis: 20%; flex-grow: 1; display: flex; align-items: center; justify-content: center; cursor: pointer; 
			flex-direction: row; background-size: 20px; cursor: pointer;
		}
        .icon:hover { background-color: $colorHover; }

		.iconObject { height: 52px; }

		.icon.collapse { display: none; }
        .icon.store { background-image: url('~img/icon/sidebar/store.svg'); }
        .icon.add { background-image: url('~img/icon/sidebar/add.svg'); }
        .icon.settings { background-image: url('~img/icon/sidebar/settings.svg'); }
        .icon.collapse { background-image: url('~img/icon/sidebar/collapse.svg'); }
    }
    
    .body { overflow: hidden; height: 100%; position: relative; flex-grow: 1; }
    .body {
        .ReactVirtualized__List { overflow: overlay !important; }
        .ReactVirtualized__Grid__innerScrollContainer { margin: 0px 0px 10px 0px; }

        .icon { width: 20px; height: 20px; flex-shrink: 0; flex-basis: 20px; transition: none; }

        .icon.set { background-image: url('~img/icon/sidebar/set.svg'); }
        .icon.blank { background-image: url('~img/icon/sidebar/blank.svg'); }
        .icon.arrow { 
            background-image: url('~img/arrow/select/dark.svg'); transform: rotate(-90deg); cursor: pointer;
        }

        .item { position: relative; }
        .item {
            .inner { 
                display: flex; flex-direction: row; gap: 0px 2px; align-items: center; justify-content: space-between; 
                cursor: pointer; position: relative; padding: 2px 14px 2px 10px;
            }
            .inner::before {
                content: ""; position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; background: rgba(172, 169, 150, 0); z-index: 1;
                pointer-events: none; border-radius: inherit; transition: $transitionFast;
            }
            .inner:hover::before, .inner.hover::before { background: $colorHover; }

            .iconObject { flex-shrink: 0; flex-basis: 20px; }
            .clickable { 
                flex-grow: 1; display: flex; flex-direction: row; gap: 0px 6px; width: calc(100% - 24px); align-items: center; 
                justify-content: space-between; cursor: pointer;
            }
            .name { flex-grow: 1; @include text-overflow-nw; }
        }
        .item.hover .inner::before { background: $colorHover; }
        
        .item.active .icon.arrow { transform: rotate(0deg); }

        .item.isSection { padding-bottom: 2px; }
        .item.isSection.withPadding { padding-top: 8px; }
        .item.isSection {
            .icon.arrow { background-image: url('~img/arrow/sidebar.svg'); }
            .name { @include text-paragraph; @include text-overflow-nw; font-weight: 600; flex-grow: 1; }
            .cnt { flex-shrink: 0; text-align: right; @include text-small; flex-basis: 20px; }
        }

    }
}

.sidebar.fixed {
	.foot {
		.item.collapse { display: flex; }
	}
}

html.bodyMainIndex {
	#sidebar { display: none; }
}

html.platformMac {
    body.isFullScreen {
        .sidebar {
            .head { height: 12px !important; }
        }
    }
}

